--- a/Videos.html
+++ b/Videos.html
@@ -9,7 +9,7 @@
 <ul>
   <li><a href="Index.html">Home</a></li>
   <li><a href="News.html">News</a></li>
-  <li><a href="#contact">Games</a></li>
+  <li><a href="Games.html">Games</a></li>
   <li style="float:right"><a class="active" href="#about">Videos</a></li>
 </ul>
 
