--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 <body>
 
 <ul>
-  <li><a href="Index.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="News.html">News</a></li>
   <li><a href="Games.html">Games</a></li>
   <li style="float:right"><a class="active" href="Videos.html">Videos</a></li>
