--- a/Videos.html
+++ b/Videos.html
@@ -7,10 +7,10 @@
 <body>
 
 <ul>
-  <li><a href="Index.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="News.html">News</a></li>
   <li><a href="Games.html">Games</a></li>
-  <li style="float:right"><a class="active" href="#about">Videos</a></li>
+  <li style="float:right"><a class="active" href="Videos.html">Videos</a></li>
 </ul>
 
 
