--- a/Index.html
+++ b/Index.html
@@ -1,28 +1,42 @@
-<!doctype html>
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <link rel="stylesheet" href="Index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Sr. Roboto's Tech Emporium</title>
 </head>
+
 <body>
+    <header>
+        <h1>Sr. Roboto's Tech Emporium</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="repair.html">Repair</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="signup.html">Signup</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="News.html">News</a></li>
-  <li><a href="Games.html">Games</a></li>
-  <li style="float:right"><a class="active" href="Videos.html">Videos</a></li>
-</ul>
+    <main>
+        <section>
+            <h2>Welcome to Sr. Roboto's Tech Emporium!</h2>
+            <p>Discover a world of cutting-edge technology at Sr. Roboto's Tech Emporium. We bring you the latest and greatest gadgets to enhance your digital lifestyle.</p>
+            <p>From powerful smartphones to sleek laptops, and innovative smart home devices, we curate a collection of tech marvels. Our mission is to provide you with top-notch products that seamlessly integrate into your daily life.</p>
+            <p>Explore our Products section to find high-quality electronics from leading brands. Whether you're a tech enthusiast, a professional, or someone looking for the perfect gift, we have something for everyone.</p>
+            <p>Have a device that needs fixing? Check out our Repair services. Our skilled technicians are dedicated to bringing your gadgets back to life with efficiency and care.</p>
+            <p>Curious about the story behind Sr. Roboto's Tech Emporium? Visit our About page to learn about our journey and commitment to delivering exceptional tech solutions.</p>
+            <p>Ready to join the tech revolution? Sign up for exclusive offers, updates, and more. Sr. Roboto's Tech Emporium is not just a store; it's an experience.</p>
+        </section>
+    </main>
 
-<h1 style="color:Violet;"> Welcome to GamingTV's Gamer Website </h1>
-
-<p style="color:DodgerBlue;"> Did you find this website from GamingTV's EPIC youtube channel. It's the best godamn
-
-website you're ever going to see in your mortal existence. We have videos (Only from Gaming TV)
-and Games (only made by Gaming TV) </p>
-
-<img src="Untitled-1.png">
-
-<p style:"color:DodgerBlue;"> Thank you for visiting my website </p>
-
-
+    <footer>
+        <p>&copy; Sr. Roboto's Tech Emporium. All rights reserved.</p>
+    </footer>
 </body>
+
+</html>
